minor changes/code cleanup